--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,23 @@ body {
 
 /* Media query for small screens */
 @media (max-width: 768px) {
+
+  /* Webkit scrollbar */
+  ::-webkit-scrollbar {
+    width: 3px; /* Width of the scrollbar */
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgba(255, 148, 114, 0.1); /* Background color of the scrollbar track */
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: linear-gradient(to right top, #ff9472, #f2709c);
+    border-radius: 5px; 
+  }
+
   .download-container {
     height: auto; /* Auto height for small screens */
     padding: 2rem; /* Add padding for better spacing */
