--- a/src/css/admin/navbar.css
+++ b/src/css/admin/navbar.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(to right top, #ff9472, #f2709c);
+    background: linear-gradient(to right top, #f2709c, #ff9472);
     /* background-color: #474554; */
     padding: 12px 20px;
 }
@@ -30,7 +30,7 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     transition: transform 0.3s ease;
 }
 
